--- a/Index.html
+++ b/Index.html
@@ -24,9 +24,9 @@
     </div>
     <div>
         <ul id="navbar">
-            <li><a class="active" href="index.html">Home</a></li>
+            <li><a class="active" href="Index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="products.html">Products</a></li>
+            <li><a href="Products.html">Products</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping" aria-hidden="true"></i></a></li>
             <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
