--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
     </div>
     <div>
         <ul id="navbar">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="products.html">Products</a></li>
+            <li><a href="Products.html">Products</a></li>
             <li><a class="active" href="contact.html">Contact</a></li>
             <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping" aria-hidden="true"></i></a></li>
             <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
