--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <section id="header">
-    <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
+    <a href="#"><img src="./Assetsfolder/Moko avali logo.png" class="logo" alt="2hands logo"></a>
     <div class="header-title-slogan">
         <h1 class="site-title">2HANDS PRINTINGS</h1>
         <span class="site-slogan">always better together</span>
@@ -55,7 +55,7 @@
         <div class="pro-container">
             
             <div class="pro">
-                <img src="NEWW/Services/FRNDZZZZ.jpg" alt="image of flyer">
+                <img src="./Assetsfolder/FRNDZZZZ.jpg" alt="image of flyer">
                 <div class="descr">
                     <h5>Flyer Designs</h5>
                     <div class="price-cart-row">
@@ -67,7 +67,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Brand/fooocus.png" alt="image of t-shirts">
+                <img src="./Assetsfolder/fooocus.png" alt="image of t-shirts">
                 <div class="descr">
                     <h5>T Shirt Printing</h5>
                     <div class="price-cart-row">
@@ -78,7 +78,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Resized/Card Size.jpg" alt="image of cards">
+                <img src="./Assetsfolder/Card Size.jpg" alt="image of cards">
                 <div class="descr">
                     <h5>Cards Printing</h5>
                     <div class="price-cart-row">
@@ -89,7 +89,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Resized/Camera Size.jpg" alt="camera image">
+                <img src="./Assetsfolder/Camera Size.jpg" alt="camera image">
                 <div class="descr">
                     <h5>Photography</h5>
                     <div class="price-cart-row">
@@ -100,7 +100,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Services/Gazebo bl.jpg" alt="small tent image">
+                <img src="./Assetsfolder/Gazebo bl.jpg" alt="small tent image">
                 <div class="descr">
                     <h5>Gazebo Renting</h5>
                     <div class="price-cart-row">
@@ -111,7 +111,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Resized/Copier Size.jpg" alt="copy machine image">
+                <img src="./Assetsfolder/Copier Size.jpg" alt="copy machine image">
                 <div class="descr">
                     <h5>Copy/Scan/Type</h5>
                     <div class="price-cart-row">
@@ -122,7 +122,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Resized/Tees Pln Size.jpg" alt="plain T-shirts">
+                <img src="./Assetsfolder/Tees Pln Size.jpg" alt="plain T-shirts">
                 <div class="descr">
                     <h5>Plain T Shirt sale</h5>
                     <div class="price-cart-row">
@@ -133,7 +133,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Services/WONDERKIDS.jpg" alt="school poster design">
+                <img src="./Assetsfolder/WONDERKIDS.jpg" alt="school poster design">
                 <div class="descr">
                     <h5>Marketing posters</h5>
                     <div class="price-cart-row">
@@ -156,7 +156,7 @@
         <p>Available at our shop, get custom printed items</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="NEWW/Brand/fooocus.png" alt="Old focus design t-shirt">
+                <img src="./Assetsfolder/fooocus.png" alt="Old focus design t-shirt">
                 <div class="descr">
                     <h5>FOCUS T-shirts</h5>
                     <div class="price-cart-row">
@@ -167,7 +167,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/FRRR/hoodie.png" alt="white branded hoodies">
+                <img src="./Assetsfolder/hoodie.png" alt="white branded hoodies">
                 <div class="descr">
                     <h5>Branded Hoodies</h5>
                     <div class="price-cart-row">
@@ -178,7 +178,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/FRRR/mug2.png" alt="custom printed mugs">
+                <img src="./Assetsfolder/mug2.png" alt="custom printed mugs">
                 <div class="descr">
                     <h5>Printed Mugs</h5>
                     <div class="price-cart-row">
@@ -189,7 +189,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/FRRR/cap-mockup-0010.png" alt="lady with branded cap">
+                <img src="./Assetsfolder/cap-mockup-0010.png" alt="lady with branded cap">
                 <div class="descr">
                     <h5>Caps</h5>
                     <div class="price-cart-row">
@@ -200,7 +200,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/FRRR/Pillow.png" alt="image of pillow case custom-printed">
+                <img src="./Assetsfolder/Pillow.png" alt="image of pillow case custom-printed">
                 <div class="descr">
                     <h5>Pillow case</h5>
                     <div class="price-cart-row">
@@ -211,7 +211,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/GREEN FOcUS.png" alt="image of colorful vinyl sticker">
+                <img src="./Assetsfolder/GREEN FOcUS.png" alt="image of colorful vinyl sticker">
                 <div class="descr">
                     <h5>Colorful stickers/labels</h5>
                     <div class="price-cart-row">
@@ -222,7 +222,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Resized/2 H Size.jpg" alt="Image of printed stickers">
+                <img src="./Assetsfolder/2 H Size.jpg" alt="Image of printed stickers">
                 <div class="descr">
                     <h5>Vinyl stickers</h5>
                     <div class="price-cart-row">
@@ -233,7 +233,7 @@
             </div>
 
             <div class="pro">
-                <img src="NEWW/Resized/Friens Size.jpg" alt="Image of Printed T-shirts">
+                <img src="./Assetsfolder/Friens Size.jpg" alt="Image of Printed T-shirts">
                 <div class="descr">
                     <h5>Friends to FAM</h5>
                     <div class="price-cart-row">
@@ -274,7 +274,7 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img class="loggo" src="NEWW/icons/2HANDS.jpg" alt="company logo">
+            <img class="loggo" src="./Assetsfolder/2HANDS.jpg" alt="company logo">
             <h4>Contact</h4>
             <p><strong>Address:</strong> Rundu. Ndama, along Trans-Caprivi High Way. Kavango East</p>
             <p><strong>Phone:</strong> +264(0)81 8288204/ +264(0)81 3243806</p>
@@ -307,7 +307,7 @@
 
         <div class="col payment">
             <p>Payment methods</p>
-            <img class="payy" src="NEWW/Pay/pay now.jpg" alt="payment methods">
+            <img class="payy" src="./Assetsfolder/pay now.jpg" alt="payment methods">
         </div>
 
         <div class="copyright">
