--- a/products.html
+++ b/products.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="style.css">
      <meta property="og:title" content="2HANDS PRINTINGS">
     <meta property="og:description" content="Professional printing, design, and branding services in Namibia.">
-    <meta property="og:image" content="NEWW/icons/2HANDS.jpg">
+    <meta property="og:image" content="Assetsfolder/2HANDS.jpg">
     <meta property="og:type" content="website">
 </head>  
 
 <body>
 <section id="header">
-    <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
+    <a href="#"><img src="Assetsfolder/Moko avali logo.png" class="logo" alt="2hands logo"></a>
     <div class="header-title-slogan">
         <h1 class="site-title">2HANDS PRINTINGS</h1>
         <span class="site-slogan">always better together</span>
@@ -48,7 +48,7 @@
 
     <div class="pro-container">
         <div class="pro">
-            <img src="NEWW/Services/FRNDZZZZ.jpg" alt="image of flyer design">
+            <img src="Assetsfolder/FRNDZZZZ.jpg" alt="image of flyer design">
                 <div class="descr">
                     <h5>Flyer Designs</h5>
                     <div class="price-cart-row">
@@ -59,7 +59,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Brand/simple-t-shirt-mockup.png" alt="image of printed t-shirt">
+            <img src="Assetsfolder/simple-t-shirt-mockup.png" alt="image of printed t-shirt">
             <div class="descr">
                     <h5>T-shirts Printing</h5>
                     <div class="price-cart-row">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Resized/Card Size.jpg" alt="image of printed pvc cards">
+            <img src="Assetsfolder/Card Size.jpg" alt="image of printed pvc cards">
               <div class="descr">
                     <h5>Cards printing </h5>
                     <div class="price-cart-row">
@@ -81,7 +81,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Resized/Camera Size.jpg" alt="image of camera">
+            <img src="Assetsfolder/Camera Size.jpg" alt="image of camera">
               <div class="descr">
                     <h5>Photography</h5>
                     <div class="price-cart-row">
@@ -92,7 +92,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Services/Gazebo bl.jpg" alt="image of small rental tent">
+            <img src="Assetsfolder/Gazebo bl.jpg" alt="image of small rental tent">
                 <div class="descr">
                     <h5>Gazebo rental</h5>
                     <div class="price-cart-row">
@@ -103,7 +103,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Resized/Copier Size.jpg" alt="copy machine">
+            <img src="Assetsfolder/Copier Size.jpg" alt="copy machine">
                  <div class="descr">
                     <h5>Copies, CV-Typing, Scan</h5>
                     <div class="price-cart-row">
@@ -114,7 +114,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Resized/Tees Pln Size.jpg" alt="image of plain t-shirts">
+            <img src="Assetsfolder/Tees Pln Size.jpg" alt="image of plain t-shirts">
                 <div class="descr">
                     <h5>Plain T-shirts</h5>
                     <div class="price-cart-row">
@@ -125,7 +125,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Services/WONDERKIDS.jpg" alt="flyer image">
+            <img src="Assetsfolder/WONDERKIDS.jpg" alt="flyer image">
               <div class="descr">
                     <h5>Graphics Designs</h5>
                     <div class="price-cart-row">
@@ -136,7 +136,7 @@
         </div>
     
         <div class="pro">
-            <img src="NEWW/Brand/fooocus.png" alt="focus brand t-shirt">
+            <img src="Assetsfolder/fooocus.png" alt="focus brand t-shirt">
              <div class="descr">
                     <h5>FOCUS T-Shirt</h5>
                     <div class="price-cart-row">
@@ -147,7 +147,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/FRRR/hoodie.png" alt="white hoodie printed">
+            <img src="Assetsfolder/hoodie.png" alt="white hoodie printed">
             <div class="descr">
                     <h5>Hoodies</h5>
                     <div class="price-cart-row">
@@ -158,7 +158,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/FRRR/mug2.png" alt="white mug printed">
+            <img src="Assetsfolder/mug2.png" alt="white mug printed">
                <div class="descr">
                     <h5>Custom Print Mugs</h5>
                     <div class="price-cart-row">
@@ -169,7 +169,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/FRRR/cap-mockup-0010.png" alt="image of branded cap">
+            <img src="Assetsfolder/cap-mockup-0010.png" alt="image of branded cap">
                <div class="descr">
                     <h5>Caps</h5>
                     <div class="price-cart-row">
@@ -180,7 +180,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/FRRR/Pillow.png" alt="image of pillow case">
+            <img src="Assetsfolder/Pillow.png" alt="image of pillow case">
               <div class="descr">
                     <h5>Pillow Cases</h5>
                     <div class="price-cart-row">
@@ -191,7 +191,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Resized/2 H Size.jpg" alt="vinyl stickers image">
+            <img src="Assetsfolder/2 H Size.jpg" alt="vinyl stickers image">
               <div class="descr">
                     <h5>Colorful stickers</h5>
                     <div class="price-cart-row">
@@ -202,7 +202,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Resized/2 H Size.jpg" alt="sticker image">
+            <img src="Assetsfolder/2 H Size.jpg" alt="sticker image">
                <div class="descr">
                     <h5>vinyl stickers</h5>
                     <div class="price-cart-row">
@@ -213,7 +213,7 @@
         </div>
 
         <div class="pro">
-            <img src="NEWW/Resized/Friens Size.jpg" alt="image of clients">
+            <img src="Assetsfolder/Friens Size.jpg" alt="image of clients">
             <div class="descr">
                 <h5>Wall of Clients</h5>
                 <div class="price-cart-row">
@@ -238,7 +238,7 @@
 
 <footer class="section-p1">
     <div class="col">
-        <img class="loggo" src="NEWW/icons/2HANDS.jpg" alt="company logo">
+        <img class="loggo" src="Assetsfolder/2HANDS.jpg" alt="company logo">
         <h4>Contact</h4>
         <p><strong>Address:</strong>Rundu. Ndama, along Trans-Caprivi High Way. Kavango East</p>
         <p><strong>Phone:</strong>+264(0)81 8288204/ +264(0)81 3243806</p>
@@ -271,7 +271,7 @@
 
     <div class="col payment">
         <p>Payment methods</p>
-        <img class="payy" src="NEWW/Pay/pay now.jpg" alt="">
+        <img class="payy" src="Assetsfolder/pay now.jpg" alt="">
     </div>
     <div class="copyright">
       <p>copyright 2020 2handsprinting MokoAvali Trading Nam cc</p>
