--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="style.css">
      <meta property="og:title" content="2HANDS PRINTINGS">
     <meta property="og:description" content="Professional printing, design, and branding services in Namibia.">
-    <meta property="og:image" content="NEWW/icons/2HANDS.jpg">
+    <meta property="og:image" content="Assetsfolder/2HANDS.jpg">
     <meta property="og:type" content="website">
 </head>  
 
 <body>
 <section id="header">
-    <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
+    <a href="#"><img src="Assetsfolder/Moko avali logo.png" class="logo" alt="2hands logo"></a>
     <div class="header-title-slogan">
         <h1 class="site-title">2HANDS PRINTINGS</h1>
         <span class="site-slogan">always better together</span>
@@ -43,7 +43,7 @@
 </section>
 
 <section id="about-head" class="section-p1">
-    <img src="NEWW/printit.jpg" alt="img of girl printing">
+    <img src="Assetsfolder/printit.jpg" alt="img of girl printing">
     <div class="about-text">
         <h2>About Us</h2>
      <p>
@@ -126,7 +126,7 @@
 
 <footer class="section-p1">
     <div class="col">
-        <img class="loggo" src="NEWW/icons/2HANDS.jpg" alt="company logo">
+        <img class="loggo" src="Assetsfolder/icons/2HANDS.jpg" alt="company logo">
         <h4>Contact</h4>
         <p><strong>Address:</strong>Rundu. Ndama, along Trans-Caprivi High Way. Kavango East</p>
         <p><strong>Phone:</strong>+264(0)81 8288204/ +264(0)81 3243806</p>
@@ -160,7 +160,7 @@
 
     <div class="col payment">
         <p>Payment methods</p>
-        <img class="payy" src="NEWW/Pay/pay now.jpg" alt="payment options">
+        <img class="payy" src="Assetsfolder/pay now.jpg" alt="payment options">
     </div>
     <div class="copyright">
       <p>copyright 2020 2handsprinting MokoAvali Trading Nam cc</p>
