--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="2HANDS PRINTINGS">
     <meta property="og:description" content="Professional printing, design, and branding services in Namibia.">
-    <meta property="og:image" content="NEWW/icons/2HANDS.jpg">
+    <meta property="og:image" content="Assetsfolder/2HANDS.jpg">
     <meta property="og:type" content="website">
 </head>  
 
@@ -163,7 +163,7 @@
 
 <footer class="section-p1">
     <div class="col">
-        <img class="loggo" src="NEWW/icons/2HANDS.jpg" alt="company logo">
+        <img class="loggo" src="Assetsfolder/2HANDS.jpg" alt="company logo">
         <h4>Contact</h4>
         <p><strong>Address:</strong>Rundu. Ndama, along Trans-Caprivi High Way. Kavango East</p>
         <p><strong>Phone:</strong>+264(0)81 8288204/ +264(0)81 3243806</p>
