--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <section id="header">
-    <a href="#"><img src="Assetsfolder/Moko avali logo.png" class="logo" alt="2hands logo"></a>
+    <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
     <div class="header-title-slogan">
         <h1 class="site-title">2HANDS PRINTINGS</h1>
         <span class="site-slogan">always better together</span>
@@ -274,7 +274,7 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img class="loggo" src="Assetsfolder/2HANDS.jpg" alt="company logo">
+            <img class="loggo" src="NEWW/2HANDS.jpg" alt="company logo">
             <h4>Contact</h4>
             <p><strong>Address:</strong> Rundu. Ndama, along Trans-Caprivi High Way. Kavango East</p>
             <p><strong>Phone:</strong> +264(0)81 8288204/ +264(0)81 3243806</p>
