--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 <body>
 <section id="header">
-    <a href="#"><img src="Assetsfolder/Moko avali logo.png" class="logo" alt="2hands logo"></a>
+    <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
     <div class="header-title-slogan">
         <h1 class="site-title">2HANDS PRINTINGS</h1>
         <span class="site-slogan">always better together</span>
@@ -43,7 +43,7 @@
 </section>
 
 <section id="about-head" class="section-p1">
-    <img src="Assetsfolder/printit.jpg" alt="img of girl printing">
+    <img src="NEWW/printit.jpg" alt="img of girl printing">
     <div class="about-text">
         <h2>About Us</h2>
      <p>
