--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 
 <body>
 <section id="header">
-    <a href="#"><img src="Assetsfolder/Moko avali logo.png" class="logo" alt="2hands logo"></a>
+    <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
     <div class="header-title-slogan">
         <h1 class="site-title">2HANDS PRINTINGS</h1>
         <span class="site-slogan">always better together</span>
