--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
 
 <footer class="section-p1">
     <div class="col">
-        <img class="loggo" src="Assetsfolder/icons/2HANDS.jpg" alt="company logo">
+        <img class="loggo" src="Assetsfolder/2HANDS.jpg" alt="company logo">
         <h4>Contact</h4>
         <p><strong>Address:</strong>Rundu. Ndama, along Trans-Caprivi High Way. Kavango East</p>
         <p><strong>Phone:</strong>+264(0)81 8288204/ +264(0)81 3243806</p>
