--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
 
             <div class="pro">
-                <img src="Assetsfolder/GREEN FOcUS.png" alt="image of colorful vinyl sticker">
+                <img src="NEWW/GREEN FOcUS.png" alt="image of colorful vinyl sticker">
                 <div class="descr">
                     <h5>Colorful stickers/labels</h5>
                     <div class="price-cart-row">
