--- a/cart.html
+++ b/cart.html
@@ -196,7 +196,7 @@
 
     <div class="col payment">
         <p>Payment methods</p>
-        <img class="payy" src="NEWW/Pay/pay now.jpg" alt="payment methods">
+        <img class="payy" src="NEWW/pay now.jpg" alt="payment methods">
     </div>
     <div class="copyright">
       <p>copyright 2020 2handsprinting MokoAvali Trading Nam cc</p>
