--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
         <div class="col payment">
             <p>Payment methods</p>
-            <img class="payy" src="Assetsfolder/pay now.jpg" alt="payment methods">
+            <img class="payy" src="NEWW/paynow.jpg" alt="payment methods">
         </div>
 
         <div class="copyright">
