--- a/products.html
+++ b/products.html
@@ -271,7 +271,7 @@
 
     <div class="col payment">
         <p>Payment methods</p>
-        <img class="payy" src="Assetsfolder/pay now.jpg" alt="">
+        <img class="payy" src="NEWW/paynow.jpg" alt="">
     </div>
     <div class="copyright">
       <p>copyright 2020 2handsprinting MokoAvali Trading Nam cc</p>
