--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
 
     <div class="col payment">
         <p>Payment methods</p>
-        <img class="payy" src="Assetsfolder/pay now.jpg" alt="payment options">
+        <img class="payy" src="NEWW/paynow.jpg" alt="payment options">
     </div>
     <div class="copyright">
       <p>copyright 2020 2handsprinting MokoAvali Trading Nam cc</p>
