--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h1 class="site-title">2HANDS PRINTINGS</h1>
         <span class="site-slogan">always better together</span>
     </div>
+
+    <!-- Fullnav mobile + Desktop --->
     <div>
         <ul id="navbar">
             <li><a class="active" href="index.html">Home</a></li>
@@ -32,6 +34,7 @@
             <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
         </ul>
     </div>
+    
     <div id="mobile">
         <a href="cart.html"><i class="fa-solid fa-cart-shopping" aria-hidden="true"></i></a>
         <i id="bar" class="fa-solid fa-bars"></i>
