--- a/sproduct.html
+++ b/sproduct.html
@@ -12,19 +12,32 @@
 
 <body>
 <section id="header">
-    <a href="#"><img src="NEWW/icons/TWO HANDS LOGO 2021 NO 2 2.png" class="logo" alt="2hands logo"></a>
+  <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
 
-    <div>
-        <ul id="navbar"> 
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a class="active" href="products.html">Products</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
-        </ul>
-    </div>
+  <div class="header-title-slogan">
+    <h1 class="site-title">2HANDS PRINTINGS</h1>
+    <span class="site-slogan">always better together</span>
+  </div>
+
+  <!-- Navigation -->
+  <div id="nav-wrapper">
+    <ul id="navbar">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a class="active" href="products.html">Products</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+      <li><a href="#" id="close"><i class="fa-solid fa-xmark"></i></a></li>
+    </ul>
+  </div>
+
+  <!-- Mobile icons -->
+  <div id="mobile">
+    <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+    <i id="bar" class="fa-solid fa-bars"></i>
+  </div>
 </section>
+
 
 <section id="prodetails" class="section-p1">
     <div class="single-pro-image">
