--- a/products.html
+++ b/products.html
@@ -27,9 +27,9 @@
   <!-- Navigation -->
   <div id="nav-wrapper">
     <ul id="navbar">
-      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="products.html">Products</a></li>
+      <li><a class="active" href="products.html">Products</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
       <li><a href="#" id="close"><i class="fa-solid fa-xmark"></i></a></li>
