--- a/about.html
+++ b/about.html
@@ -16,25 +16,30 @@
 
 <body>
 <section id="header">
-    <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
-    <div class="header-title-slogan">
-        <h1 class="site-title">2HANDS PRINTINGS</h1>
-        <span class="site-slogan">always better together</span>
-    </div>
-    <div>
-        <ul id="navbar">
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="about.html">About</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping" aria-hidden="true"></i></a></li>
-            <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
-        </ul>
-    </div>
-    <div id="mobile">
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping" aria-hidden="true"></i></a>
-        <i id="bar" class="fa-solid fa-bars"></i>
-    </div>
+  <a href="#"><img src="NEWW/Moko avali logo.png" class="logo" alt="2hands logo"></a>
+
+  <div class="header-title-slogan">
+    <h1 class="site-title">2HANDS PRINTINGS</h1>
+    <span class="site-slogan">always better together</span>
+  </div>
+
+  <!-- Navigation -->
+  <div id="nav-wrapper">
+    <ul id="navbar">
+      <li><a href="index.html">Home</a></li>
+      <li><a class="active" href="about.html">About</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+      <li><a href="#" id="close"><i class="fa-solid fa-xmark"></i></a></li>
+    </ul>
+  </div>
+
+  <!-- Mobile icons -->
+  <div id="mobile">
+    <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+    <i id="bar" class="fa-solid fa-bars"></i>
+  </div>
 </section>
 
 <section id="page-header" class="about-header">
