--- a/cart.html
+++ b/cart.html
@@ -48,7 +48,7 @@
 </section>
 
 <section id="cart" class="section-p1">
-   <table id="cart-table">
+    <table id="cart-table">
         <thead>
             <tr>
                 <th>Product/Service</th>
@@ -59,91 +59,85 @@
         </thead>
         <tbody>
             <tr>
-                <td>T-shirt Printing</td>
-                <td class="price">80.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">80.00</td>
+                <td data-label="Product/Service">T-shirt Printing</td>
+                <td data-label="Unit Price (N$)" class="price">80.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">80.00</td>
             </tr>
             <tr>
-                <td>Flyer/Logo Designs</td>
-                <td class="price">200.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">200.00</td>
+                <td data-label="Product/Service">Flyer/Logo Designs</td>
+                <td data-label="Unit Price (N$)" class="price">200.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">200.00</td>
             </tr>
             <tr>
-                <td>Photos</td>
-                <td class="price">10.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">10.00</td>
+                <td data-label="Product/Service">Plain T-shirts</td>
+                <td data-label="Unit Price (N$)" class="price">75.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">75.00</td>
             </tr>
             <tr>
-                <td>Mugs printing</td>
-                <td class="price">60.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">60.00</td>
-            </tr>
-            <tr>
-                <td>Certificates printing</td>
-                <td class="price">15.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">15.00</td>
-            </tr>
-            <tr>
-                <td>Student cards</td>
-                <td class="price">65.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">65.00</td>
-            </tr>
-            <tr>
-                <td>Color Stickers/labels</td>
-                <td class="price">15.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">30.00</td>
-            </tr>
-            <tr>
-                <td>Binding</td>
-                <td class="price">20.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">80.00</td>
-            </tr>
-            <tr>
-                <td>FOCUS Hoodies</td>
-                <td class="price">350.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">350.00</td>
-            </tr>
-            <tr>
-                <td>Business Card</td>
-                <td class="price">100.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">100.00</td>
-            </tr>
+                <td data-label="Product/Service">FOCUS T-shirts</td>
+                <td data-label="Unit Price (N$)" class="price">180.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">180.00</td>
+            </tr>                
              <tr>
-                <td>Plain T-shirts</td>
-                <td class="price">70.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">70.00</td>
+                <td data-label="Product/Service">FOCUSS Hoodies</td>
+                <td data-label="Unit Price (N$)" class="price">350.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">350.00</td>
             </tr>
-             <tr>
-                <td>FOCUS T-shirts</td>
-                <td class="price">150.00</td>
-                <td><input type="number" class="qty" value="0" min="0"></td>
-                <td class="subtotal">180.00</td>
+            <tr>
+                <td data-label="Product/Service">Card printing</td>
+                <td data-label="Unit Price (N$)" class="price">65.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">65.00</td>
             </tr>
-        </tbody>
+            <tr>
+                <td data-label="Product/Service">Mugs printing</td>
+                <td data-label="Unit Price (N$)" class="price">80.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">80.00</td>
+            </tr>
+            <tr>
+                <td data-label="Product/Service">Colorful sticker/Label</td>
+                <td data-label="Unit Price (N$)" class="price">30.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">30.00</td>
+            </tr>  
+              <tr>
+                <td data-label="Product/Service">Business Cards Printing</td>
+                <td data-label="Unit Price (N$)" class="price">25.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">25.00</td>
+            </tr>
+            <tr>
+                <td data-label="Product/Service">Website Development</td>
+                <td data-label="Unit Price (N$)" class="price">2500.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">2500.00</td>
+            </tr>
+            <tr>
+                <td data-label="Product/Service">Certificate Printing</td>
+                <td data-label="Unit Price (N$)" class="price">20.00</td>
+                <td data-label="Quantity"><input type="number" class="qty" value="0" min="0"></td>
+                <td data-label="Subtotal (N$)" class="subtotal">20.00</td>
+            </tr>  
+    
+   </tbody>
         <tfoot>
             <tr>
                 <td colspan="3" style="text-align:right;"><strong>Total:</strong></td>
                 <td id="cart-total"><strong>0.00</strong></td>
             </tr>
-             <tr>
+            <tr>
                 <td colspan="4" style="text-align:right;">
                     <button id="place-order-btn" class="normal">Place Order</button>
                 </td>
             </tr>
         </tfoot>
     </table>
-
 </section>
 
 <section id="delivery-info" class="section-p1" style="max-width:700px; margin:40px auto 20px auto; background:#232837; color:#ffd700; border-radius:10px; padding:32px 24px; text-align:center;">
