--- a/about.html
+++ b/about.html
@@ -52,16 +52,16 @@
     <div class="about-text">
         <h2>About Us</h2>
      <p>
-    We are a Namibian printing shop dedicated to providing high-quality, custom print services. Our mission is to help businesses, Graduates, and the local community bring their ideas to life through exceptional printing solutions. From T-shirts and business cards to booklets and photos, we offer a wide range of products tailored to meet your unique needs.
+    We are a Namibian printing shop dedicated to providing high-quality, custom print services. Our mission is to help businesses, Graduates, and the local community to print and bring their ideas to life through exceptional printing solutions. From T-shirts and custom garment printing, Business related designs/brandings, Website-design, Academic printings, Job required documents, quality photos and more.. we offer a wide range of products tailored to meet your unique needs.
 </p>
 <p>
-    At 2hands Printing Shop, we’re passionate about bringing your ideas to life, one print at a time. As an experienced team, we specialize in high-quality, custom print services that help businesses, families, and individuals share their stories and establish their brands. Whether you need to print T-shirts, business cards, booklets, photos, wedding flags, CV, mugs, or want to create a website — we’ve got you covered!
+    At 2hands Printing Shop, we’re passionate about bringing your ideas to life, one print at a time. As an experienced team, we specialize in high-quality, custom print services that are customer-centric.
 </p>
 <p>
-    We take pride in delivering sharp, vibrant results with a personal touch. With years of experience and a commitment to top-tier customer service, we work closely with each client to understand their vision and ensure that every print job meets their exact needs. From start to finish, we offer expert advice, fast turnarounds, and affordable prices, all while maintaining the highest standards of craftsmanship.
+    We take pride in delivering sharp, vibrant results with a personal touch. We commit endeavor to provide top-tier customer service, by working closely with each client to understand their vision and ensure that every print job meets their exact needs. From start to finish, we offer suitable advice, fast turnarounds, and affordable prices, all while maintaining the highest standards of craftsmanship.
 </p>
 <p>
-    We believe that the right print can make all the difference. Let us help you establish your brand today.
+    We believe that the right print can make all the difference. Let us help you achieve your goal today!
 </p>
     </div>
 </section>
